# br-scraping-npb

./: .gitignore  LICENSE  README.md  concat_files.py  players.py  pyproject.toml  requirements.txt  stats_all_batter.py  stats_all_pitcher.py  stats_batter.py  stats_pitcher.py  teams.py
br/: batter.py  fielder.py  pitcher.py
service/: __init__.py
