[tool.poetry]
name = "br-scraping-npb"
version = "0.1.0"
description = ""
authors = ["Shinichi Nakagawa <spirits.is.my.rader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests-html = "^0.10.0"
click = "^7.1.2"
pandas = "^1.2.4"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
