[tool.poetry]
name = "br-scraping-npb"
version = "1.0.0"
description = "NPB Stats Scraping from Baseball Reference"
authors = ["Shinichi Nakagawa <spirits.is.my.rader@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
requests-html = "^0.10.0"
click = "^8.1.3"
pandas = "^2.0.3"
numpy = "^1.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
